--- a/app.css
+++ b/app.css
@@ -1,13 +1,14 @@
 body{
-    background-color: #c2d9c1;
+    
+    background-color: #c9ebc8;
     margin: 0;
 }
 
 .headerText{
     background-color: #839e83;
-    color: #232a23;
+    color: #263226;
     font-family: 'Bodoni MT', 'Calisto MT', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size:x-large;
+    font-size: 27px;
     width: 100%;
     padding: 1px;
     text-align: center;
@@ -16,43 +17,62 @@ body{
 
 #top{
     text-align: center;
-
+    font-size: 0;
+    padding-bottom: 0.5px;
+    background-color: #caa78a;
 }
 .topButtons{
+    display: inline-block;
     background-color: #caa78a;
-    font-family: 'Segoe UI',  sans-serif;
+
+
+    font-family: "Poppins", 'Segoe UI',  sans-serif;
+    font-size: medium;
     font-weight: 600;
     text-transform: capitalize;
+    color: #331d0b;
+
     border: 0px;
-    border-radius: 3px;
-    margin: 0;
-    margin-top: 5px;
-    padding: 5px;
-    width: 90px;
-    
+    padding: 9px;
+    margin: 0px;
+    width: 120px;
+
+    -ms-transform: skewX(-20deg);
+    -webkit-transform: skewX(-20deg);
+    transform: skewX(-20deg); 
+}
+
+.buttonText{ 
+    display: inline-block;
+    -ms-transform: skewX(20deg);
+    -webkit-transform: skewX(20deg);
+    transform: skewX(20deg); 
 }
 
 #container{
+    color: #263226;
     margin: auto;
+    margin-top: 40px;
     width: 80%;
     height: 300px;
     text-align: center;
-    font-family: 'Segoe UI',  sans-serif;
+    font-family: "Poppins", 'Segoe UI',  sans-serif;
     font-size: 25px;
     font-weight: 600;
-    background-color: #e8fce8;
+    background-color: #def2de;
     border-radius: 20px;
-    padding: 30px;
+    padding-top: 60px;
 }
 .selector{
     display: inline-block; margin-right: 10px;
 }
 select{
-    font-family: 'Segoe UI',  sans-serif;
+    background-color: #f4fff4;
+    color: #263226;
+    font-family: "Poppins", 'Segoe UI',  sans-serif;
     font-weight: 600;
     font-size: 25px;
-    border: 2px;
-    border-color: #232a23;
+    border: 3px #839e83 solid;
     border-radius: 3px;
     padding: 5px;
     width: auto;
@@ -61,13 +81,14 @@ select{
     display: inline-block;
 }
 .fieldBox{
-    font-family: 'Segoe UI',  sans-serif;
+    background-color: #f4fff4;
+    color: #263226;
+    font-family: "Poppins", 'Segoe UI',  sans-serif;
     font-weight: 600;
     font-size: 25px;
-    border: 2px;
-    border-color: #232a23;
+    border: 3px #839e83  inset;
     border-radius: 3px;
     padding: 5px;
-    width: 150px;
+    width: 200px;
 }
 
